[package]
name = "sarne"
version = "0.1.0"
edition = "2021"

[lib]
name = "sarne"
path = "src/lib.rs"

[[bin]]
name = "sarned"
path = "src/bin/sarned.rs"

[dependencies]
prost = "0.14.1"
prost-types = "0.14.1"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "fs", "signal"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
hex = "0.4"
anyhow = "1.0"
hyper = "1.0"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http2"] }
hyper-tls = "0.6"
native-tls = "0.2"
tower = "0.5"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-journald = "0.3"

[build-dependencies]
tonic-prost-build = "0.14"
